--- a/packages/lookeng/index.html
+++ b/packages/lookeng/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <title>openLookeng</title>
+    <title>openLookeng Summary</title>
   </head>
 
   <body>
