--- a/packages/euler/index.html
+++ b/packages/euler/index.html
@@ -15,16 +15,8 @@
     <p>IE is not supported, please use another browser to visit!</p>
   </div>
   <script type="module" src="/src/main.ts"></script>
-  <script>
-    var _hmt = _hmt || [];
-    (function () {
-      // 百度统计
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?ab8d86daab9a8e98cf8faa239aefcd3c";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(hm, s);
-    })();
-  </script>
+  <script src="/allow_sensor/sensors.js"></script>
+  <script src="/allow_sensor/sensorsdata.min.js"></script>
   <script>
     function isIE() {
       if (!!window.ActiveXObject || 'ActiveXObject' in window) return true;
