--- a/packages/lookeng/index.html
+++ b/packages/lookeng/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -16,6 +17,8 @@
       <p>IE is not supported, please use another browser to visit!</p>
     </div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="/allow_sensor/sensors.js"></script>
+    <script src="/allow_sensor/sensorsdata.min.js"></script>
     <script>
       function isIE() {
         if (!!window.ActiveXObject || 'ActiveXObject' in window) return true;
@@ -24,14 +27,6 @@
       if (isIE()) {
         document.querySelector('#ieTips').style.display = 'block';
       }
-      // 埋点
-      var _hmt = _hmt || [];
-      (function () {
-        var hm = document.createElement('script');
-        hm.src = 'https://hm.baidu.com/hm.js?d5f7e2406b6ef91d4494f0c6ea829f91';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(hm, s);
-      })();
     </script>
   </body>
 </html>
