--- a/packages/mindspore/index.html
+++ b/packages/mindspore/index.html
@@ -16,6 +16,8 @@
     <p>IE is not supported, please use another browser to visit!</p>
   </div>
   <script type="module" src="/src/main.ts"></script>
+  <script src="/allow_sensor/sensors.js"></script>
+  <script src="/allow_sensor/sensorsdata.min.js"></script>
   <script>
     function isIE() {
       if (!!window.ActiveXObject || 'ActiveXObject' in window) return true;
