--- a/packages/gauss/index.html
+++ b/packages/gauss/index.html
@@ -14,6 +14,8 @@
     <p>不支持IE，请使用其他浏览器访问！</p>
     <p>IE is not supported, please use another browser to visit!</p>
   </div>
+  <script src="/allow_sensor/sensors.js"></script>
+  <script src="/allow_sensor/sensorsdata.min.js"></script>
   <script type="module" src="/src/main.ts"></script>
   <script>
     function isIE() {
