--- a/packages/euler/index.html
+++ b/packages/euler/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-  <meta itemprop="image" content="/logo.png">
+  <meta itemprop="image" content="https://www.openeuler.org/img/other/brand/brand-mobile-1.png">
   <title>openEuler Summary</title>
 </head>
 
