--- a/packages/euler/index.html
+++ b/packages/euler/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
-  <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta itemprop="name" content="openEuler Summary"/>
   <meta itemprop="image" content="https://www.openeuler.org/img/other/brand/brand-mobile-1.png">
+  <meta name="description" itemprop="description" content="openEuler Summary 2022" />
   <title>openEuler Summary</title>
 </head>
 
