--- a/packages/mindspore/public/agreement_ch.html
+++ b/packages/mindspore/public/agreement_ch.html
@@ -32,10 +32,12 @@
 
 <body>
     <h2>网站用户协议</h2>
-    <p>1、为了生成您的个人年度报告，我们将根据您的授权查询您的Gitee账号2019年1月1日至2023年12月30日期间的登录时间、PR提交数据、评论数据等，并据此进行汇总统计分析，以用于本活动页面向您进行信息展示。</p>
-    <p>2、您的个人年度报告为算法自动生成结果，可能会与实际有偏差，我们无法保证相关数据的绝对准确性和有效性。</p>
-    <p>3、活动页面包含您的Gitee账号信息，当您选择向其他人转发活动页面的截图，其他人会看到上述信息，请谨慎选择。</p>
-    <p>4、除上述声明目的外，我们不会对本次查询的信息作其他处理。</p>
+    <p>1、您理解并同意，您使用MindSpore个人年度报告服务（以下称“本服务”）即视为您已充分阅读并同意接受本声明内容，否则请您立即停用本服务。</p>
+    <p>2、为向您提供本服务之必需，我们将根据您的授权查询您的Gitee账号2019年1月1日至2023年12月30日期间的使用数据（包括登录时间、PR提交数据、Issue提交数据、Fork代码仓库数、和评论数据）并据此进行汇总统计分析，以生成您的个人年度报告，并通过本服务页面向您进行展示。如您选择不提供或不同意我们查询和使用上述数据，我们将无法为您服务。</p>
+    <p>3、除上述声明目的外，我们不会对本次查询的数据作其他处理。</p>
+    <p>4、您的个人年度报告是根据算法自动生成的，可能会与实际存在偏差，我们无法保证相关数据的绝对准确性和有效性。</p>
+    <p>5、您的个人年度报告包含您的Gitee账号信息，您了解并同意我们遵照MindSpore社区隐私声明使用该信息，以提供本服务。当您选择向其他人转发您的个人年度报告，其他人会看到上述信息，请谨慎选择。</p>
+    <p>6、您了解并同意，您使用本服务符合法律法规的要求。我们仅按照您的指示，为您提供标准服务，并不对您使用本服务的合法合规性负责。</p>
 </body>
 
 </html>
